Rename collectd role.

--- a/edmservers.yml
+++ b/edmservers.yml
@@ -3,7 +3,7 @@
 
 - hosts: edmservers
   roles:
-    - { role: collectd,
+    - { role: valentinogagliardi.collectd,
         collectd_plugins:
           [{ plugin: "load" },
            { plugin: "memory" },
