--- a/databases.yml
+++ b/databases.yml
@@ -3,7 +3,7 @@
 
 - hosts: databases
   roles:
-    - { role: collectd,
+    - { role: valentinogagliardi.collectd,
         collectd_plugins:
           [{ plugin: "load" },
            { plugin: "memory" },
