tandoori_admin | shinken base automation over openvpn

--- a/roles/mowee.openvpn/tasks/main.yml
+++ b/roles/mowee.openvpn/tasks/main.yml
@@ -40,14 +40,14 @@
 
 - name: create specific static ip file for every nodes
   shell:
-    /bin/echo "ifconfig-push {{ virtual_network }}{{ hostvars[item]['v_ptp'] }} 
-    {{ virtual_network }}{{ hostvars[item]['v_inet'] }}"
+    /bin/echo "ifconfig-push {{ virtual_network }}{{ hostvars[item]['v_inet'] }} 
+    {{ virtual_network }}{{ hostvars[item]['v_ptp'] }}"
     > /etc/openvpn/ccd/{{ item }}
   with_items: groups['production']
 
 - name: copy ccd content to jail
   command:
-    cp -R /etc/openvpn/ccd/ /etc/openvpn/jail/ccd/
+    cp -fR /etc/openvpn/ccd/ /etc/openvpn/jail/
 
 - name: Restart OpenVPN
   action: service name=openvpn state=restarted
