--- a/roles/mowee.shinken/files/linux-snmp/commands.cfg
+++ b/roles/mowee.shinken/files/linux-snmp/commands.cfg
@@ -40,3 +40,8 @@ define command {
     command_name  check_linux_time
     command_line  $NAGIOSPLUGINSDIR$/check_ntp_time -H $HOSTADDRESS$ -w $_HOSTNTP_WARN$ -c $_HOSTNTP_CRIT$
 }
+
+define command {
+    command_name  check_nginx_status
+    command_line  $PLUGINSDIR$/check_nginx_status.pl -H $HOSTADDRESS$ -w $_HOSTNGINX_WARN$ -c $_HOSTNGINX_CRIT$
+}
