tandoori_admin | nginx status ok on reverse_proxies

--- a/roles/mowee.shinken/files/nginx/services/nginx.cfg
+++ b/roles/mowee.shinken/files/nginx/services/nginx.cfg
@@ -1,8 +1,8 @@
 define service {
-    service_description   Nginx
+    service_description   nginx
     use                   10min_long,linux-service
     register              0
-    host_name             linux-snmp
+    host_name             nginx
     check_command         check_nginx_status
 
     _DETAILLEDESC         Detect abnormal nginx usage
