Monitoring pacemaker resource failures.

--- a/roles/mowee.shinken/files/pacemaker/commands.cfg
+++ b/roles/mowee.shinken/files/pacemaker/commands.cfg
@@ -2,3 +2,8 @@ define command {
        command_name     check_pcmk_online_nodes
        command_line     $NAGIOSPLUGINSDIR$/check_snmp -H $HOSTADDRESS$ -C $SNMPCOMMUNITYREAD$ -o sys4PcmkOnlineNodes.0 -w $_HOSTNODES_WARN$: -c $_HOSTNODES_CRIT$:
 }
+
+define command {
+       command_name     check_pcmk_resource_failures
+       command_line     $NAGIOSPLUGINSDIR$/check_snmp -H $HOSTADDRESS$ -C $SNMPCOMMUNITYREAD$ -o sys4PcmkResourceFailures.0 -w :$_SERVICERESOURCE_FAILURES_WARN$ -c :$_SERVICERESOURCE_FAILURES_CRIT$
+}
