Enable apt monitoring on servers.

--- a/edmservers.yml
+++ b/edmservers.yml
@@ -3,6 +3,9 @@
 
 - hosts: edmservers
   roles:
+    - { role: tonioo.server_setup,
+        tags: ["base"] }
+
     - { role: valentinogagliardi.collectd,
         collectd_plugins:
           [{ plugin: "load" },
