--- a/mailservers.yml
+++ b/mailservers.yml
@@ -3,6 +3,9 @@
 
 - hosts: mailservers
   roles:
+    - { role: tonioo.server_setup,
+        tags: ["base"] }
+
     - { role: valentinogagliardi.collectd,
         collectd_plugins:
           [{ plugin: "load" },
