--- a/middlewares.yml
+++ b/middlewares.yml
@@ -3,6 +3,9 @@
 
 - hosts: middlewares
   roles:
+    - { role: tonioo.server_setup,
+        tags: ["base"] }
+    
     - { role: valentinogagliardi.collectd,
         collectd_plugins:
           [{ plugin: "load" },
