Add plugin for pgpool.

--- a/roles/munin/setup_monitoring.yml
+++ b/roles/munin/setup_monitoring.yml
@@ -8,13 +8,20 @@
     - munin_plugin_dest_path: /etc/munin/plugins/
     - munin_plugin_src_path: /usr/share/munin/
     - munin_node_plugins_database:
-        - name: if_eth0
-          plugin: plugins/if_
+        - name: postgres_connections_db
+          plugin: plugins/postgres_connections_db
+        - name: postgres_xlog
+          plugin: plugins/postgres_xlog
+        - name: postgres_size_ALL
+          plugin: plugins/postgres_size_
+
     - munin_node_plugins_middleware:
         - name: if_eth0
           plugin: plugins/if_
         - name: uwsgi_average
           plugin: contrib/plugins/uwsgi/uwsgi_
+        - name: pgpool_connections
+          plugin: munin_pgpool/pgpool_connections
 
     - munin_node_plugins_reverse_proxy:
         - name: nginx_status
